# diesel-uuid

./: .gitignore  Cargo.toml
migrations/2023-03-12-112627_create_text_chunk/: down.sql  up.sql
migrations/2023-03-12-125354_insert_test_data/: down.sql  up.sql
src/: main.rs  schema.rs
