[package]
name = "dieselChallenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["uuid", "postgres"] }
diesel_migrations = "2.0.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
dotenv = "0.15.0"